k8s/tracking/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking
  template:
    metadata:
     labels:
       app: tracking
    spec:
      containers:
        - image: tracking:0.1
          imagePullPolicy: Never
          name: tracking
          ports:
            - containerPort: 8080
