k8s/tracking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: tracking
