k8s/tracking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/tracking
            pathType: "Prefix"
            backend:
              service:
                name: tracking-service
                port:
                  number: 80
